--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 /* Limit these definitions to the things that are applicable to every screen. In other cases, 
-   use CSS modules with component-local scope, and import/compose for shared definitions. */
+   use CSS modules with component-local scope, and import/compose for shared definitions. 
+
+   rem is used as a unit for blocks of text where readability is important, honoring any adjustments
+   the user has made.
+
+   vh is used as a unit for nearly everything else to scale and remain somewhat consistent on 
+   layout in different form factors. Why don't I use vw for horizontal dimensions? Because using vh 
+   preserves aspect ratios in layout.
+*/
 
 * {
   margin: 0;
